Display optimizations on percentage again.

--- a/examples/d3_circle/style.css
+++ b/examples/d3_circle/style.css
@@ -59,7 +59,7 @@
 }
 
 #progress-meter .complete {
-	fill: #5BCC9A;
+	fill: #78A18F;
 }
 
 #progress-meter .result_value, #progress-meter .result_label {
